fixed spacing on css again

--- a/01week/resume/style.css
+++ b/01week/resume/style.css
@@ -22,9 +22,7 @@ body {
 }
 
 .name {
-  background-image:
-  url("http://february20th.com/wp-content/uploads/2015/10/austin-skyline-at-
-  night-black-and-white-bw-panorama-texas-jon-holiday.jpg");
+  background-image: url("http://february20th.com/wp-content/uploads/2015/10/austin-skyline-at-night-black-and-white-bw-panorama-texas-jon-holiday.jpg");
   background-repeat: no-repeat;
   background-position: center;
   color: #D7263D;
